<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.umd.cmsc436.Level.LevelActivity">

    <Button android:id="@+id/startlevelTestButton"
        android:text="@string/startTest"
        android:textSize="30sp"
        android:padding="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent436"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="startlevelTest" />

    <Button android:id="@+id/helpButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:background="@drawable/question_mark"
        android:onClick="showInstructions"/>

    <TextView android:id="@+id/levelTestTextCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text=""
        android:visibility="gone" />

    <edu.umd.cmsc436.Level.BallView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ccc"
        android:id="@+id/ballViewContainer"
        android:visibility="gone" />

    <TextView android:id="@+id/levelTimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/timeLeft"
        android:textStyle="bold"
        android:textSize="35sp"
        android:visibility="gone"/>

    <RadioGroup android:id="@+id/levelOutputRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="2dp"
        android:visibility="gone"
        android:background="@color/colorAccentLight436">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent436"
            android:textSize="25sp"
            android:text="@string/pathOutput"
            android:checked="true"
            android:id="@+id/pathRadioButton"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent436"
            android:textSize="25sp"
            android:text="@string/heatmapOutput"
            android:id="@+id/heatmapRadioButton"/>
    </RadioGroup>

    <Button android:id="@+id/levelOutputButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/levelOutput"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:visibility="gone"/>

    <Button android:id="@+id/done_button"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/levelOutputButton"
        android:text="@string/done"
        android:textSize="20sp"
        android:padding="20dp"
        android:visibility="gone" />

</RelativeLayout>
